--- a/pathology_search/templates/pathology_search/patient_history.html
+++ b/pathology_search/templates/pathology_search/patient_history.html
@@ -127,11 +127,11 @@
                     </div>
                     {% endif %}
                     
-                    <!-- Plan de traitement (aperçu) -->
+                    <!-- Diagnostic Summary (aperçu) -->
                     <div class="mb-4">
                         <h4 class="font-semibold text-gray-700 mb-2 flex items-center">
-                            <i class="fas fa-pills text-red-500 mr-2"></i>
-                            Plan de traitement
+                            <i class="fas fa-file-medical-alt text-red-500 mr-2"></i>
+                            Diagnostic Summary
                         </h4>
                         <div class="bg-blue-50 p-3 rounded-lg text-gray-700">
                             {{ consultation.plan_traitement|truncatewords:50 }}
