--- a/pathology_search/templates/pathology_search/print_report.html
+++ b/pathology_search/templates/pathology_search/print_report.html
@@ -348,9 +348,9 @@
                 </ul>
             </div>
             
-            <!-- Plan de traitement -->
+            <!-- Diagnostic Summary -->
             <div class="section">
-                <div class="section-title">💊 PLAN DE TRAITEMENT RECOMMANDÉ</div>
+                <div class="section-title">📋 DIAGNOSTIC SUMMARY</div>
                 <div class="text-content">{{ consultation.plan_traitement|clean_text|linebreaks|safe }}</div>
             </div>
         </div>
